# page-tracker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/page_tracker/: app.py
test/unit/: test_app.py
web/: Dockerfile.dev  constraints.txt  pyproject.toml
web/src/page_tracker/: app.py
web/test/unit/: test_app.py
